bdr.BDR2.scala.error
Erreur de compilation :
BDR2:3: error: not found: value message
  message= litMessage()
  ^BDR2:4: error: not found: value message
  message match {
  ^BDR2:11: error: value avance is not a member of Unit
    case "D" => avance(); avance(); avance() avance();
                                             ^BDR2:12: error: value avance is not a member of Unit
    case "E" => avance(); avance(); avance() avance(); avance()
                                             ^BDR2:13: error: value avance is not a member of Unit
    case "F" => avance(); avance(); avance() avance(); avance(); avance()
                                             ^